redis 素材重置
